--- a/devops/geoapi-services/nginx.conf
+++ b/devops/geoapi-services/nginx.conf
@@ -1,46 +1,54 @@
-server {
-  include /etc/nginx/mime.types;
-  client_max_body_size 25g;
-  proxy_read_timeout 600s;
-  proxy_send_timeout  600s;
-  proxy_connect_timeout  20s;
+events {
+  worker_connections 1024; # increase if you have lots of clients
+  accept_mutex off; # set to 'on' if nginx worker_processes > 1
+  use epoll;
+}
 
-  gzip on;
-  gzip_proxied any;
-  gzip_types *;
-  gzip_min_length 250;
+http {
+    server {
+      include /etc/nginx/mime.types;
+      client_max_body_size 25g;
+      proxy_read_timeout 600s;
+      proxy_send_timeout  600s;
+      proxy_connect_timeout  20s;
 
-  client_body_buffer_size 70m;
-  client_header_buffer_size 50k;
-  large_client_header_buffers 2 50k;
+      gzip on;
+      gzip_proxied any;
+      gzip_types *;
+      gzip_min_length 250;
 
-  location / {
-       add_header "Access-Control-Allow-Origin"  *;
+      client_body_buffer_size 70m;
+      client_header_buffer_size 50k;
+      large_client_header_buffers 2 50k;
 
-      # Preflighted requests
-      if ($request_method = OPTIONS ) {
-          add_header "Access-Control-Allow-Origin"  *;
-          add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD, PUT, DELETE";
-          add_header "Access-Control-Allow-Headers" "*";
-          add_header 'Access-Control-Max-Age' 1728000;
-          add_header 'Content-Length' 0;
-          return 204;
+      location / {
+           add_header "Access-Control-Allow-Origin"  *;
+
+          # Preflighted requests
+          if ($request_method = OPTIONS ) {
+              add_header "Access-Control-Allow-Origin"  *;
+              add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD, PUT, DELETE";
+              add_header "Access-Control-Allow-Headers" "*";
+              add_header 'Access-Control-Max-Age' 1728000;
+              add_header 'Content-Length' 0;
+              return 204;
+          }
+          rewrite ^/api(.*) /$1 break;
+          proxy_pass http://geoapi:5000;
+          proxy_http_version 1.1;
+          proxy_set_header Upgrade $http_upgrade;
+          proxy_set_header Connection 'upgrade';
+          proxy_set_header Host $host;
+          proxy_cache_bypass $http_upgrade;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       }
-      rewrite ^/api(.*) /$1 break;
-      proxy_pass http://geoapi:5000;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection 'upgrade';
-      proxy_set_header Host $host;
-      proxy_cache_bypass $http_upgrade;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  }
 
-  location /assets {
-      max_ranges 0;
-      expires 30d;
-      add_header "Access-Control-Allow-Origin"  *;
-      alias /assets/;
-  }
+      location /assets {
+          max_ranges 0;
+          expires 30d;
+          add_header "Access-Control-Allow-Origin"  *;
+          alias /assets/;
+      }
+    }
 }
