--- a/devops/geoapi-services/Makefile
+++ b/devops/geoapi-services/Makefile
@@ -1,7 +1,9 @@
 .PHONY: start
 start:
+    echo "starting services GEOAPI_TAG=$GEOAPI_TAG"
 	docker-compose -f docker-compose.yml up
 
 .PHONY: stop
 stop:
+    echo "stopping services (GEOAPI_TAG=$GEOAPI_TAG)"
 	docker-compose -f docker-compose.yml down
