--- a/devops/geoapi-services/docker-compose.yml
+++ b/devops/geoapi-services/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     environment:
       - FLASK_APP=/app/geoapi/app.py
       - ASSETS_BASE_DIR=/assets
+      - GEOAPI_TAG=ENV_GEOAPI_TAG
     stdin_open: true
     tty: true
     container_name: geoapiworkers
@@ -47,6 +48,7 @@ services:
     environment:
       - FLASK_APP=/app/geoapi/app.py
       - ASSETS_BASE_DIR=/assets
+      - GEOAPI_TAG=ENV_GEOAPI_TAG
     stdin_open: true
     tty: true
     container_name: geoapicelerybeat
@@ -68,7 +70,7 @@ services:
     environment:
       - FLASK_APP=/app/geoapi/app.py
       - ASSETS_BASE_DIR=/assets
-
+      - GEOAPI_TAG=ENV_GEOAPI_TAG
     stdin_open: true
     tty: true
     container_name: geoapi
