--- a/devops/geoapi-services/Makefile
+++ b/devops/geoapi-services/Makefile
@@ -2,8 +2,7 @@
 .PHONY: start
 start:
 	echo "starting (GEOAPI_TAG=${GEOAPI_TAG})"
-	#docker compose -f docker-compose.yml up -d
-	docker compose -f docker-compose.yml up 
+	docker compose -f docker-compose.yml up -d
 
 .PHONY: stop
 stop:
