--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,8 +63,9 @@ jobs:
         poetry install
     - name: Run server-side unit tests
       run: |
-        cp poetry.lock  ../
-        cp poetry.toml  ../
+        # cp devops/poetry.lock  ../
+        # cp devops/pyproject.toml  ../
+        cd devops
         poetry run pytest ../geoapi
   Workers_Unit_Tests:
     runs-on: ubuntu-latest
