--- a/devops/geoapi-workers/docker-compose.yml
+++ b/devops/geoapi-workers/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
   workers:
     image: taccaci/geoapi-workers:${GEOAPI_TAG}
+    restart: always
     volumes:
       - /assets:/assets
     env_file: /opt/portal/conf/secrets.env
