--- a/devops/pyproject.toml
+++ b/devops/pyproject.toml
@@ -23,6 +23,7 @@ Fiona = "1.8.21"
 gunicorn = "^20.1.0"
 gevent = "^21.12.0"
 Flask = "^2.1.2"
+flask-socketio = "^5.3.6"
 Werkzeug = "2.1.2"
 flask-restx = "^0.5.1"
 psycopg2 = "^2.9.3"
