--- a/devops/geoapi-services/docker-compose.yml
+++ b/devops/geoapi-services/docker-compose.yml
@@ -29,8 +29,8 @@ services:
     volumes:
       - /assets:/assets
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - /etc/letsencrypt/live/${NGINX_SERVER_NAME}/fullchain.pem:/etc/ssl/certs/portal.cer
-      - /etc/letsencrypt/live/${NGINX_SERVER_NAME}/privkey.pem:/etc/ssl/private/portal.key
+      - /etc/letsencrypt/live/${GEOAPI_SERVICES_HOST}/fullchain.pem:/etc/ssl/certs/portal.cer
+      - /etc/letsencrypt/live/${GEOAPI_SERVICES_HOST}/privkey.pem:/etc/ssl/private/portal.key
     logging:
       driver: syslog
       options:
