--- a/devops/geoapi-services/docker-compose.yml
+++ b/devops/geoapi-services/docker-compose.yml
@@ -1,6 +1,4 @@
 ---
-version: "3"
-
 networks:
   geoapi:
 
@@ -26,10 +24,13 @@ services:
     image: nginx
     restart: always
     ports:
-      - 8888:80
+      - 80:80
+      - 443:443
     volumes:
       - /assets:/assets
       - ./nginx.conf:/etc/nginx/nginx.conf
+      - /etc/letsencrypt/live/${GEOAPI_SERVICES_HOST}/fullchain.pem:/etc/ssl/certs/portal.cer
+      - /etc/letsencrypt/live/${GEOAPI_SERVICES_HOST}/privkey.pem:/etc/ssl/private/portal.key
     logging:
       driver: syslog
       options:
@@ -66,8 +67,6 @@ services:
       - geoapi
     volumes:
       - /assets:/assets
-    ports:
-      - 8000:8000
     dns:
       - 8.8.8.8
       - 8.8.4.4
@@ -92,7 +91,7 @@ services:
     image: taccaci/hazmapper:${HAZMAPPER_TAG}
     restart: always
     ports:
-      - 80:80
+      - 83:80
     container_name: hazmapper
 
   taggit:
@@ -113,7 +112,7 @@ services:
     image: containrrr/watchtower:1.7.1
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    command: --interval 300 api celerybeat hazmapper hazmapper-react taggit
+    command: --interval 300 geoapi geoapicelerybeat hazmapper hazmapper-react taggit
     # Watchtower configuration for development environment. This service monitors
     # and updates the specified containers every 5 min (300s). Staging/Production
     # use specific commit hash tags, so updates are controlled and do not affect
