--- a/devops/docker-compose.local.yml
+++ b/devops/docker-compose.local.yml
@@ -56,6 +56,7 @@ services:
       - APP_ENV=local
       - ASSETS_BASE_DIR=/assets
       - TENANT=${TENANT_TAPIS_V3}
+      - DESIGNSAFE_URL=${DESIGNSAFE_URL}
 
     stdin_open: true
     tty: true
@@ -99,6 +100,7 @@ services:
       - APP_ENV=local
       - ASSETS_BASE_DIR=/assets
       - TENANT=${TENANT_TAPIS_V3}
+      - DESIGNSAFE_URL=${DESIGNSAFE_URL}
     stdin_open: true
     tty: true
     container_name: geoapi
