--- a/devops/pyproject.toml
+++ b/devops/pyproject.toml
@@ -30,12 +30,12 @@ requests = "^2.29.0"
 laspy = "1.6.0"
 configparser = "^5.2.0"
 cryptography = "^37.0.2"
-mapillary_tools = { path = "./mapillary_source" }
 requests-mock = "^1.10.0"
 ExifRead = "^2.3.2"
 flake8 = "^5.0.4"
 urllib3 = "<2"
 pytest-mock = "^3.12.0"
+mapillary-tools = {git = "https://github.com/mapillary/mapillary_tools.git"}
 
 [tool.poetry.dev-dependencies]
 
