--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -7,18 +7,17 @@ RUN apt-get update -q && apt-get install -q -y \
   curl \
   git
 
-ENV POETRY_VERSION=1.4.2
+ENV POETRY_VERSION=1.8.3
 ENV POETRY_HOME=/opt/poetry
 ENV PATH="$POETRY_HOME/bin:$PATH"
 RUN curl -sSL https://install.python-poetry.org | python3 -
 RUN poetry config virtualenvs.create false
 
-RUN mkdir /app
-WORKDIR /app
-
+WORKDIR /opt
 COPY devops/poetry.lock devops/pyproject.toml ./
 RUN poetry install
 
+RUN mkdir /app
 COPY geoapi /app/geoapi
 ENV PYTHONPATH "${PYTHONPATH}:/app"
 WORKDIR /app/geoapi
