--- a/devops/docker-compose.test.yml
+++ b/devops/docker-compose.test.yml
@@ -60,6 +60,8 @@ services:
       - APP_ENV=testing
       - ASSETS_BASE_DIR=/assets
       - TENANT
+      - DESIGNSAFE_URL
+      - FLASK_SESSION_SECRET_KEY
     stdin_open: true
     tty: true
     networks:
