--- a/devops/geoapi-workers/docker-compose.yml
+++ b/devops/geoapi-workers/docker-compose.yml
@@ -9,8 +9,7 @@ services:
     environment:
       - FLASK_APP=/app/geoapi/app.py
       - ASSETS_BASE_DIR=/assets
-      - GEOAPI_TAG=ENV_GEOAPI_TAG
-      - DESIGNSAFE_URL=${DESIGNSAFE_URL}
+      - DESIGNSAFE_URL
     stdin_open: true
     tty: true
     container_name: geoapiworkers
