--- a/devops/docker-compose.local.yml
+++ b/devops/docker-compose.local.yml
@@ -1,4 +1,5 @@
----
+name: geoapi
+
 volumes:
   assets:
   pgdata:
@@ -7,6 +8,17 @@ networks:
   geoapi:
 
 services:
+  redis:
+    image: redis:7-bookworm
+    command: redis-server --loglevel warning
+    networks:
+      - geoapi
+    container_name: geoapi_redis
+    healthcheck:
+      test: redis-cli ping
+      interval: 5s
+      timeout: 30s
+      retries: 5
 
   rabbitmq:
     image: rabbitmq:3-management
@@ -46,7 +58,8 @@ services:
       - ./local_conf/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - geoapi
-
+    depends_on:
+      - flask
 
   workers:
     image: taccaci/geoapi-workers:local
@@ -88,8 +101,6 @@ services:
       - FLASK_APP=/app/geoapi/app.py
       - APP_ENV=local
       - ASSETS_BASE_DIR=/assets
-    stdin_open: true
-    tty: true
     container_name: geoapicelerybeat
     hostname: geoapicelerybeat
     command: "celery -A geoapi.celery_app beat -l info"
@@ -97,7 +108,7 @@ services:
       rabbitmq:
         condition: service_healthy
 
-  api:
+  flask:
     image: taccaci/geoapi:local
     networks:
       - geoapi
@@ -105,10 +116,7 @@ services:
       - ../:/app
       - assets:/assets
     ports:
-      - 8000:8000
-    dns:
-      - 8.8.8.8
-      - 8.8.4.4
+      - 8000-8003:8000
     environment:
       - MAPILLARY_CLIENT_TOKEN
       - FLASK_APP=/app/geoapi/app.py
@@ -120,8 +128,12 @@ services:
       - TAPIS_CLIENT_KEY
     stdin_open: true
     tty: true
-    container_name: geoapi
+    scale: 4
+    # container_name: geoapi
     hostname: geoapi
-    command: "gunicorn -w 1 -b 0.0.0.0:8000 geoapi.app:app -k gevent --reload --timeout 300"
+    command: "gunicorn -w 1 -b 0.0.0.0:8000 geoapi.app:app -k geventwebsocket.gunicorn.workers.GeventWebSocketWorker --reload --timeout 300"
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    depends_on:
+      redis:
+        condition: service_healthy
