--- a/devops/pyproject.toml
+++ b/devops/pyproject.toml
@@ -24,12 +24,14 @@ optional = true
 cryptography = "^43.0.3"
 flask = "^3.1.0"
 flask-restx = "^1.3.0"
+flask-socketio = "^5.4.1"
 gevent = "^24.11.1"
+gevent-websocket = "^0.10.1"
 gunicorn = "^23.0.0"
 PyJWT = "^2.9.0"
+redis = "^5.2.0"
 requests = "^2.32.3"
 urllib3 = "^2.2.3"
-flask-socketio = "^5.4.1"
 
 [tool.poetry.group.worker]
 optional = true
