--- a/devops/local_conf/nginx.conf
+++ b/devops/local_conf/nginx.conf
@@ -19,8 +19,6 @@ http {
         # to scale the app, just add more nodes here!
     }
 
-    keepalive_timeout 65;
-
     server {
 
         include /etc/nginx/mime.types;
@@ -38,37 +36,35 @@ http {
                 add_header 'Content-Length' 0 always;
                 return 204;
             }
-
             rewrite ^/api(.*) /$1 break;
-            proxy_pass http://geoapi_backend;
-            proxy_send_timeout 100s;
-            proxy_read_timeout 100s;
 
-            proxy_buffering off;
+            proxy_pass http://geoapi_backend/;
+
             proxy_redirect off;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
 
             proxy_set_header Host $host;
-            # proxy_cache_bypass $http_upgrade;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $server_name;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         location /socket.io {
             proxy_pass http://geoapi_backend/socket.io;
-            proxy_http_version 1.1;
+
             proxy_buffering off;
+
+            proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
 
+            proxy_redirect off;
+
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-
-            proxy_redirect off;
+            proxy_set_header X-Forwarded-Host $server_name;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         location /assets {
