--- a/devops/hazmapper/nginx.conf
+++ b/devops/hazmapper/nginx.conf
@@ -23,6 +23,15 @@ http {
     keepalive_timeout   65;
     types_hash_max_size 2048;
 
+    gzip on;
+    gzip_comp_level 6;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_min_length 1000;
+    gzip_types application/json text/plain text/css application/javascript
+               text/javascript image/svg+xml application/x-javascript
+               font/woff font/woff2;
+
     include             /etc/nginx/mime.types;
     default_type        application/octet-stream;
 
